# diff-set

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/diff_set/: __init__.py
